[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-velesdb"
version = "1.16.0"
description = "LangChain VectorStore for VelesDB: The Local AI Memory Database. Microsecond RAG retrieval."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VelesDB Team", email = "contact@wiscale.fr"}
]
keywords = ["langchain", "velesdb", "vector-database", "embeddings", "rag", "local-first", "ai-memory", "semantic-search", "llm", "chatgpt"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# requires-python aligned with the tested matrix. Python 3.9 was advertised
# previously but never actually exercised — CI runs on 3.11 only, and the
# latest langchain-core (>=1.0) itself requires >=3.10. Setting the floor
# honestly so pip's resolver gives 3.10+ users a coherent dep tree.
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.1.0,<2.0.0",
    "velesdb>=1.14.0",
    "velesdb-common>=1.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-asyncio>=0.21,<1.0.0",
    "langchain>=0.1.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/cyberlife-coder/VelesDB"
Documentation = "https://velesdb.com/docs/integrations/langchain"
Repository = "https://github.com/cyberlife-coder/VelesDB"

[tool.setuptools.packages.find]
where = ["src"]
