[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-velesdb"
version = "3.7.0"
description = "LangGraph memory tools for VelesDB: drop the why() knowledge-graph memory wedge into any LangGraph agent."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VelesDB Team", email = "contact@wiscale.fr"}
]
keywords = ["langgraph", "langchain", "velesdb", "agent-memory", "knowledge-graph", "local-first", "why", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.0,<2.0.0",
    "velesdb>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://velesdb.com"
Repository = "https://github.com/cyberlife-coder/VelesDB"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
langgraph_velesdb = ["py.typed"]
